# c-containers

./: CMakeLists.txt  library.h
include/: c_containers.h  cc_sparse.h  cc_vec.h
src/: cc_err.h  cc_sparse.c  cc_util.h  cc_vec.c
test/: main.c
